# AdventOfCode2024

./: get_input.sh  main.py  pyproject.toml
src/day_1/: task_two.py
src/day_2/: task_two.py
src/day_3/: task_one.py  task_two.py
src/day_4/: task_one.py  task_one_checkers.py  task_two.py
src/day_5/: task_one.py  task_two.py
src/day_6/: Direction.py  GuardMapLoopChecker.py  online_solution.py  task_one.py  task_one_helpers.py  task_two.py  task_two_helpers.py
src/day_one/: input.txt  task_one.py  task_two.py
src/day_three/: task_one.py
src/day_two/: input.txt  task_one.py  task_two.py
test/day_2/: test_task_one.py  test_task_two.py
test/day_3/: test_task_one.py  test_task_two.py
test/day_4/: test_task_one.py  test_task_one_checkers.py  test_task_two.py
test/day_5/: test_task_one.py  test_task_two.py
test/day_6/: test_GuardMapLoopChecker.py  test_online_solution.py  test_task_one.py  test_task_one_helpers.py  test_task_two.py  test_task_two_helpers.py
test/day_three/: test_task_one.py
test/day_two/: test_task_one.py  test_task_two.py
